syntax = "proto3";

package pb;

option go_package = "github.com/colin-mcl/stocks/pb";

message Ticker {
    string language = 1;
    string region = 2;
    string quoteType = 3;
    string typeDisp = 4;
    string quoteSourceName = 5;
    bool   triggerable = 6;
    string customPriceAlertConfidence = 7;
    string currency = 8;
    string marketState = 9;
    double regularMarketChangePercent = 10;
    double regularMarketPrice = 11;
    string exchange = 12;
    string shortName = 13;
    string longName = 14;
    string messageBoardID = 15;
    string exchangeTimezoneName = 16;
    string exchangeTimezoneShortName = 17;
    int32 gmtOffSetMilliseconds = 18;
    string market = 19;
    bool esgPopulated = 20;
    bool hasPrePostMarketData = 21;
    int64 firstTradeDateMilliseconds = 22;
    int32 priceHint = 23;
    double regularMarketChange = 24;
    int32 regularMarketTime = 25;
    double regularMarketDayHigh = 26;
    string regularMarketDayRange = 27;
    double regularMarketDayLow = 28;
    int32 regularMarketVolume = 29;
    double regularMarketPreviousClose = 30;
    double bid= 31;
    double ask = 32;
    int32 bidSize = 33;
    int32 askSize = 34;
    string fullExchangeName = 35;
    string financialCurrency = 36;
    double regularMarketOpen = 37;
    int32 averageDailyVolume3Month = 38;
    int32 averageDailyVolume10Day = 39;
    double fiftyTwoWeekLowChange = 40;
    double fiftyTwoWeekLowChangePercent = 41;
    string fiftyTwoWeekRange = 42;
    double fiftyTwoWeekHighChange = 43;
    double fiftyTwoWeekHighChangePercent = 44;
    double fiftyTwoWeekLow = 45;
    double fiftyTwoWeekHigh = 46;
    double fiftyTwoWeekChangePercent = 47;
    int32 earningsTimestamp = 48;
    int32 earingsTimestampStart = 49;
    int32 earingsTimestampEnd = 50;
    double trailingAnnualDividendRate = 51;
    double trailingPE = 52;
    double trailingAnnualDividendYield = 53;
    double epsTrailingTwelveMonths = 54;
    double epsForward = 55;
    double epsCurrentYear = 56;
    double priceEpsCurrentYEar = 57;
    int64 sharesOutstanding = 58;
    double bookValue = 59;
    double fiftyDayAverage = 60;
    double fiftyDayAverageChange = 61;
    double fiftyDayAverageChangePercent = 62;
    double twoHundredDayAverage = 63;
    double twoHundredDayAverageChange = 64;
    double twoHundredDayAverageChangePercent = 65;
    int64 marketCap = 66;
    double forwardPE = 67;
    double priceToBook = 68;
    int32 sourceInterval = 69;
    int32 exchangeDateDelayedBy = 70;
    string averageAnalystRating = 71;
    bool tradeable = 72;
    bool cryptoTradeable = 73;
    string displayName = 74;
    string symbol = 75;


}